# TraceMemory-Copilot

./: README.md
OneDrive/Desktop/trace-memory-copilot-highlevel/trace-memory-copilot-highlevel/: .gitignore  LICENSE  NOTICE.md  README.md  app.py  pyproject.toml  requirements.txt  run_local.py
OneDrive/Desktop/trace-memory-copilot-highlevel/trace-memory-copilot-highlevel/src/: agent.py  config.py  llm_config.py  prompts.py
OneDrive/Desktop/trace-memory-copilot-highlevel/trace-memory-copilot-highlevel/src/chat/: fast_chat.py  runtime.py
OneDrive/Desktop/trace-memory-copilot-highlevel/trace-memory-copilot-highlevel/src/memory/: facts.py  user_utils.py  zep_service.py
OneDrive/Desktop/trace-memory-copilot-highlevel/trace-memory-copilot-highlevel/src/storage/: local_store.py
OneDrive/Desktop/trace-memory-copilot-highlevel/trace-memory-copilot-highlevel/src/ui/: layout.py  state.py
OneDrive/Desktop/trace-memory-copilot-highlevel/trace-memory-copilot-highlevel/src/ui/pages/: analytics_page.py  chat_page.py  memory_cards_page.py  session_diff_page.py
